--- a/includes/page-home.html
+++ b/includes/page-home.html
@@ -67,23 +67,23 @@
             </div>
             <a class="items" href="index.html?create&panel-a=earth&panel-b=urban-cowboy&couch=regent-sand&cabinet=summit&headboard=doeskin&scheme=earth">
                 <div class="item">
-                    <div class="tile texture panels earth"><span class="name">Black Hole</span></div>
+                    <div class="tile texture panels earth"><span class="name">Earth</span></div>
                     <span class="category">Panel A</span>
                 </div>
                 <div class="item">
-                    <div class="tile texture panels urban-cowboy"><span class="name">Carbon</span></div>
+                    <div class="tile texture panels urban-cowboy"><span class="name">Urban Cowboy</span></div>
                     <span class="category">Panel B</span>
                 </div>
                 <div class="item">
-                    <div class="tile texture couches regent-sand"><span class="name">Chocolate</span></div>
+                    <div class="tile texture couches regent-sand"><span class="name">Regent Sand</span></div>
                     <span class="category">Couch</span>
                 </div>
                 <div class="item">
-                    <div class="tile texture cabinets summit"><span class="name">Charcoal</span></div>
+                    <div class="tile texture cabinets summit"><span class="name">Summit</span></div>
                     <span class="category">Cabinet Interior</span>
                 </div>
                 <div class="item">
-                    <div class="tile texture headboards doeskin"><span class="name">Aubergine</span></div>
+                    <div class="tile texture headboards doeskin"><span class="name">Doeskin</span></div>
                     <span class="category">Headboard</span>
                 </div>
             </a>
@@ -99,7 +99,7 @@
                     <span class="category">Panel A</span>
                 </div>
                 <div class="item">
-                    <div class="tile texture panels stardust"><span class="name">Carbon Black</span></div>
+                    <div class="tile texture panels stardust"><span class="name">Star Dust</span></div>
                     <span class="category">Panel B</span>
                 </div>
                 <div class="item">
