--- a/includes/page-solution.html
+++ b/includes/page-solution.html
@@ -2,16 +2,18 @@
     <div class="row one">
         <div class="col-12">
             <h1>Sonno</h1>
-            <p>Deep sleep rest in a state of natural unconsciousness</p>
-            <h1>vita</h1>
-            <p>Life To live</p>
-            <p>To live in the worl’s most exclusive places, space, comfort and even style is often sacrificed. SonnoVita provides a luxurious solution that transforms limited spaces into high functioning comfortable, and beautiful spaces.</p>
+            <p>[Noun] /son•o/</p>
+            <p><strong>Deep sleep</strong> (a) rest in a state of natural unconsciousness</p>
+            <h1>Vita</h1>
+            <p>[Noun] /vi•ta/</p>
+            <p><strong>Life</strong> (a) To live</p>
+            <p>To live in the world’s most exclusive places, space, comfort and even style is often sacrificed. SonnoVita provides a luxurious solution that transforms limited spaces into high functioning comfortable, and beautiful spaces.</p>
             <p>SonnoVita offers duel function; a fabulous deep night’s sleep and a stylish daily living space in the same footprint.  Our integrated livingroom / bedroom solutions are offered in dozens of exquisite finishes and are custom made to fit in your dwelling.</p>
         </div>
     </div>
 </article>
 <header class="solution">
-    <div class="owl-carousel owl-theme">
+    <div class="owl-carousel owl-theme animation">
         <div class="slide-1"></div>
         <div class="slide-2"><div class="caption arrow">Store your couch cushions here at night</div></div>
         <div class="slide-2"><div class="caption arrow">Store your couch cushions here at night</div></div>
@@ -72,13 +74,31 @@
     </div>
 </article>
 <article class="solution customize">
-    <div class="patterns">
-        <div class="texture panels melted-chocolate"></div>
-        <div class="texture panels snow-trees"></div>
-        <div class="texture couches saddle"></div>
-        <div class="texture panels parchment"></div>
-        <div class="texture couches eugene-slate"></div>
-        <div class="texture headboards chocolate"></div>
+    <div class="owl-carousel owl-theme pattern-slider">
+        <div class="patterns">
+            <div class="texture panels melted-chocolate"></div>
+            <div class="texture panels snow-trees"></div>
+            <div class="texture couches saddle"></div>
+            <div class="texture panels parchment"></div>
+            <div class="texture couches eugene-slate"></div>
+            <div class="texture headboards chocolate"></div>
+        </div>
+        <div class="patterns">
+            <div class="texture panels graphite-reign"></div>
+            <div class="texture panels stardust"></div>
+            <div class="texture couches raspberry"></div>
+            <div class="texture cabinets charcoal"></div>
+            <div class="texture headboards gunmetal"></div>
+            <div class="texture cabinets black"></div>
+        </div>
+        <div class="patterns">
+            <div class="texture panels earth"></div>
+            <div class="texture panels urban-cowboy"></div>
+            <div class="texture couches regent-sand"></div>
+            <div class="texture cabinets summit"></div>
+            <div class="texture headboards doeskin"></div>
+            <div class="texture headboards chocolate"></div>
+        </div>
     </div>
     <div class="text">
         <div>
