--- a/includes/page-solution.html
+++ b/includes/page-solution.html
@@ -74,30 +74,36 @@
     </div>
 </article>
 <article class="solution customize">
-    <div class="owl-carousel owl-theme pattern-slider">
-        <div class="patterns">
+    <div class="patterns">
+        <div class="owl-carousel owl-theme tile-1">
             <div class="texture panels melted-chocolate"></div>
-            <div class="texture panels snow-trees"></div>
-            <div class="texture couches saddle"></div>
-            <div class="texture panels parchment"></div>
-            <div class="texture couches eugene-slate"></div>
-            <div class="texture headboards chocolate"></div>
-        </div>
-        <div class="patterns">
-            <div class="texture panels graphite-reign"></div>
-            <div class="texture panels stardust"></div>
-            <div class="texture couches raspberry"></div>
-            <div class="texture cabinets charcoal"></div>
-            <div class="texture headboards gunmetal"></div>
-            <div class="texture cabinets black"></div>
-        </div>
-        <div class="patterns">
+            <div class="texture panels serengeti"></div>
             <div class="texture panels earth"></div>
-            <div class="texture panels urban-cowboy"></div>
-            <div class="texture couches regent-sand"></div>
-            <div class="texture cabinets summit"></div>
-            <div class="texture headboards doeskin"></div>
+        </div>
+        <div class="owl-carousel owl-theme tile-2">
+            <div class="texture panels snow-trees"></div>
+            <div class="texture panels french-roast"></div>
+            <div class="texture panels melted-chocolate"></div>
+        </div>
+        <div class="owl-carousel owl-theme tile-3">
+            <div class="texture couches saddle"></div>
+            <div class="texture couches holiday-mink"></div>
+            <div class="texture couches maxima-coffee"></div>
+        </div>
+        <div class="owl-carousel owl-theme tile-4">
+            <div class="texture panels parchment"></div>
+            <div class="texture panels ravenwood"></div>
+            <div class="texture panels shades-of-gray"></div>
+        </div>
+        <div class="owl-carousel owl-theme tile-5">
+            <div class="texture couches eugene-slate"></div>
+            <div class="texture couches maxima-pewter"></div>
+            <div class="texture couches black"></div>
+        </div>
+        <div class="owl-carousel owl-theme tile-6">
             <div class="texture headboards chocolate"></div>
+            <div class="texture headboards godiva"></div>
+            <div class="texture headboards peat"></div>
         </div>
     </div>
     <div class="text">
