--- a/includes/page-schemes.html
+++ b/includes/page-schemes.html
@@ -2,6 +2,7 @@
     <div class="row">
         <div class="col-12">
             <h1>Color Schemes</h1>
+            <p>Choose one or customize one to make it your own.</p>
         </div>
     </div>
     <div class="row container">
