--- a/scss/stylesheet.scss
+++ b/scss/stylesheet.scss
@@ -321,7 +321,8 @@ body {
 			max-width: 1200px;
 			padding: 96px 0;
 
-			h1 { padding: 12px 0; }
+			h1 { padding: 12px 0 0; margin: 0; }
+			p { padding: 0 0 24px; margin: 0; }
 			.row {
 				[class*="col-"]{ padding: 0 24px; }
 			}
@@ -997,6 +998,9 @@ body {
 						}
 					}
 				}
+			}
+			&.schemes {
+				h1, p { text-align: center; }
 			}
 			&.solution {
 				&.storage {
