--- a/includes/page-solution.html
+++ b/includes/page-solution.html
@@ -44,7 +44,14 @@
             <p>No need to sacrifice storage for luxury and style. With SonnoVita you can have both. There’s even a hidden chest perfectly designed to store bedding.</p>
         </div>
     </div>
-    <div class="right-image"></div>
+    <div class="right-image">
+        <div class="owl-carousel owl-theme animation">
+            <div class="slide-1"></div>
+            <div class="slide-2"></div>
+            <div class="slide-3"></div>
+            <div class="slide-2"></div>
+        </div>
+    </div>
 </article>
 <article class="solution configurations">
     <h1>configurations</h1>
