--- a/includes/page-home.html
+++ b/includes/page-home.html
@@ -1,6 +1,7 @@
 <header class="home">
     <div class="owl-carousel owl-theme home">
         <div class="slide-1"></div>
+        <div class="slide-1-2"></div>
         <div class="slide-2"></div>
         <div class="slide-3"></div>
         <div class="slide-4"></div>
@@ -21,6 +22,7 @@
         <div class="slide-4"></div>
         <div class="slide-3"></div>
         <div class="slide-2"></div>
+        <div class="slide-1-2"></div>
         <div class="slide-1"></div>
         <div class="slide-1"></div>
         <div class="slide-1"></div>
