--- a/scss/stylesheet.scss
+++ b/scss/stylesheet.scss
@@ -19,6 +19,7 @@ body {
 			height: 150px;
 			left: 0;
 			position: absolute;
+			top: 0;
 			width: 100%;
 			z-index: -1;
 		}
@@ -747,6 +748,7 @@ body {
 		background-color: #433d39;
 		font-family: 'Roboto Condensed', sans-serif;
 		font-weight: 300;
+		height: 0px; /* fix safari issue */
 		margin-bottom: 48px;
 		padding-bottom: 110%; /* grid ratio */
 		position: relative;
@@ -812,11 +814,11 @@ body {
 				}
 			}
 
-			.panel-a    { grid-column: 1 / 2; grid-row: 1 / 1; }
-			.panel-b    { grid-column: 2 / 3; grid-row: 1 / 1; }
-			.couch      { grid-column: 1 / 2; grid-row: 2 / 4; }
-			.cabinet    { grid-column: 2 / 3; grid-row: 2 / 3; }
-			.headboard  { grid-column: 2 / 3; grid-row: 3 / 4; }
+			.panel-a    { -ms-grid-column:  1 / 2; -ms-grid-rows:  1 / 1; grid-column: 1 / 2; grid-row: 1 / 1; }
+			.panel-b    { -ms-grid-column:  2 / 3; -ms-grid-rows:  1 / 1; grid-column: 2 / 3; grid-row: 1 / 1; }
+			.couch      { -ms-grid-column:  1 / 2; -ms-grid-rows:  2 / 4; grid-column: 1 / 2; grid-row: 2 / 4; }
+			.cabinet    { -ms-grid-column:  2 / 3; -ms-grid-rows:  2 / 3; grid-column: 2 / 3; grid-row: 2 / 3; }
+			.headboard  { -ms-grid-column:  2 / 3; -ms-grid-rows:  3 / 4; grid-column: 2 / 3; grid-row: 3 / 4; }
 			
 			.caption {
 				bottom: 8px;
