slow carousel and add text shadow for captions

--- a/scss/stylesheet.scss
+++ b/scss/stylesheet.scss
@@ -825,6 +825,7 @@ body {
 				font-size: 16px;
 				left: 8px;
 				position: absolute;
+				text-shadow: 0 0 10px #37312d, 0 0 10px #37312d, 0 0 10px #37312d;
 
 				.label { text-transform: uppercase; display: block; }
 				.title { display: block; }
