--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -802,7 +802,8 @@ body {
         bottom: 8px;
         font-size: 16px;
         left: 8px;
-        position: absolute; }
+        position: absolute;
+        text-shadow: 0 0 10px #37312d, 0 0 10px #37312d, 0 0 10px #37312d; }
         body .palette .grid .caption .label {
           text-transform: uppercase;
           display: block; }
