--- a/css/textures.css
+++ b/css/textures.css
@@ -141,6 +141,7 @@
 .panels.key-lime-pie { background-image: url("../img/textures/panels/key-lime-pie.jpg"); }
 .panels.melted-chocolate { background-image: url("../img/textures/panels/melted-chocolate.jpg"); }
 .panels.midnight-crok { background-image: url("../img/textures/panels/midnight-crok.jpg"); }
+.panels.orange-crush { background-image: url("../img/textures/panels/orange-crush.jpg"); }
 .panels.parchment { background-image: url("../img/textures/panels/parchment.jpg"); }
 .panels.pearl-stardust { background-image: url("../img/textures/panels/pearl-stardust.jpg"); }
 .panels.pewter-rain { background-image: url("../img/textures/panels/pewter-rain.jpg"); }
