update regent modern gray

--- a/css/textures.css
+++ b/css/textures.css
@@ -52,7 +52,7 @@
 .couches.maxima-coffee { background-image: url("../img/textures/couches/maxima-coffee.jpg"); }
 .couches.maxima-onyx { background-image: url("../img/textures/couches/maxima-onyx.jpg"); }
 .couches.maxima-pewter { background-image: url("../img/textures/couches/maxima-pewter.jpg"); }
-.couches.modern-gray { background-image: url("../img/textures/couches/modern-gray.jpg"); }
+.couches.regent-modern-gray { background-image: url("../img/textures/couches/regent-modern-gray.jpg"); }
 .couches.off-the-grid { background-image: url("../img/textures/couches/off-the-grid.jpg"); }
 .couches.optical-white { background-image: url("../img/textures/couches/optical-white.jpg"); }
 .couches.pink-elmanordic { background-image: url("../img/textures/couches/pink-elmanordic.jpg"); }
