--- a/includes/page-home.html
+++ b/includes/page-home.html
@@ -8,6 +8,7 @@
         <div class="slide-5"></div>
         <div class="slide-6"></div>
         <div class="slide-7"></div>
+        <div class="slide-7-2"></div>
         <div class="slide-8"></div>
         <div class="slide-8"></div>
         <div class="slide-8"></div>
@@ -16,6 +17,7 @@
         <div class="slide-10"></div>
         <div class="slide-9"></div>
         <div class="slide-8"></div>
+        <div class="slide-7-2"></div>
         <div class="slide-7"></div>
         <div class="slide-6"></div>
         <div class="slide-5"></div>
