--- a/scss/stylesheet.scss
+++ b/scss/stylesheet.scss
@@ -138,6 +138,7 @@ body {
 							&.slide-5 { background-image: url('../img/home/home-5.jpg'); }
 							&.slide-6 { background-image: url('../img/home/home-6.jpg'); }
 							&.slide-7 { background-image: url('../img/home/home-7.jpg'); }
+							&.slide-7-2 { background-image: url('../img/home/home-7-2.jpg'); }
 							&.slide-8 { background-image: url('../img/home/home-8.jpg'); }
 							&.slide-9 { background-image: url('../img/home/home-9.jpg'); }
 							&.slide-10 { background-image: url('../img/home/home-10.jpg'); }
@@ -168,6 +169,7 @@ body {
 
 						/* new assets*/
 						&.slide-1 { background-image: url('../img/home/home-1.jpg'); }
+						&.slide-1-2 { background-image: url('../img/home/home-1-2.jpg'); }
 						&.slide-2 { background-image: url('../img/home/home-2.jpg'); .caption { left: 62%; top: 30%; } }
 						&.slide-3 { background-image: url('../img/home/home-3.jpg'); .caption { left: 40%; top: 50%; } }
 						&.slide-4 { background-image: url('../img/home/home-4.jpg'); }
