--- a/scss/stylesheet.scss
+++ b/scss/stylesheet.scss
@@ -588,7 +588,7 @@ body {
 					display: block;
 					font-weight: 300;
 					margin-bottom: 4px;
-					padding-bottom: 25%;
+					padding-bottom: 20%;
 					position: relative;
 					text-align: center;
 					text-decoration: none;
@@ -860,6 +860,7 @@ body {
 		}
 		&#email-scheme {
 			line-height: 30px;
+			margin-bottom: 4px;
 			text-align: center;
 			width: 100%;
 
@@ -1024,6 +1025,11 @@ body {
 			}
 			&.schemes {
 				h1, p { text-align: center; }
+			}
+			&.create {
+				.palette {
+					margin-bottom: 4px;
+				}
 			}
 			&.solution {
 				&.storage {
