--- a/scss/stylesheet.scss
+++ b/scss/stylesheet.scss
@@ -439,7 +439,8 @@ body {
 
 					.owl-carousel { 
 						height: inherit;
-						* { height: inherit; }
+						min-height: 420px;
+						* { height: inherit; min-height: inherit; }
 						.owl-item {
 							[class*="slide-"] { 
 								background-size: cover; 
@@ -1035,7 +1036,7 @@ body {
 				&.storage {
 					> * { width: 100% !important; min-height: initial; background-attachment: fixed; }
 					padding-top: 0;
-					.left-image, .right-image { height: 50vh; }
+					.left-image, .right-image { /* height: 50vh;  */}
 				}
 				&.customize {
 					.patterns { width: 100%; }
