--- a/includes/page-solution.html
+++ b/includes/page-solution.html
@@ -49,7 +49,7 @@
         </div>
     </div>
     <div class="right-image">
-        <div class="owl-carousel owl-theme animation">
+        <div class="owl-carousel owl-theme cabinet">
             <div class="slide-1"></div>
             <div class="slide-2"></div>
             <div class="slide-3"></div>
